# instagram-scraping

./: .gitignore  instagram_scrape.py  main.py  pyproject.toml
data/: comments.csv  comments.txt  comments_cleaned.txt  data.csv
notebooks/: parse.ipynb  scrape.ipynb
scripts/: parse.py  scrape.py
